flux/apps/ext/netbird-dashboard/httproute.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird-dashboard
  namespace: netbird
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-ext
  hostnames:
    - "netbird.lab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: netbird-dashboard
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: middleware-chain

    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: netbird-management
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: middleware-chain

    - matches:
        - path:
            type: PathPrefix
            value: /relay   
      backendRefs:
        - name: netbird-relay
          port: 33080
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: middleware-chain
